[tool.poetry]
name = "cvapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
marshmallow = "^3.6.0"
flask-marshmallow = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
behave = "^1.2.6"
requests = "^2.23.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
